--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JoaoSantosJHX/geradordemassa#readme",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "parquetjs": "^0.11.2"
   }
